<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.EnterCodeFragment">

    <ImageView
        android:id="@+id/register_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/register_image"
        android:layout_marginTop="@dimen/vertical_large_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/cd_register_image" />

    <TextView
        android:id="@+id/register_text_enter_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_enter_code"
        android:textSize="@dimen/big_text"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="@dimen/vertical_normal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_image" />

    <TextView
        android:id="@+id/register_text_label_sms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/label_sms"
        android:textColor="@color/colorAccentDark"
        android:layout_margin="@dimen/horizontal_margin"
        android:gravity="center"
        android:textSize="@dimen/normal_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_text_enter_code" />

    <EditText
        android:id="@+id/register_input_code"
        style="@style/edit_text"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:hint="@string/register_hint_default_code"
        android:maxLength="6"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_text_label_sms" />

</androidx.constraintlayout.widget.ConstraintLayout>