<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_header_block"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_header_bloch_height"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/settings_user_photo"
            android:layout_width="@dimen/settings_user_photo"
            android:layout_height="@dimen/settings_user_photo"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:src="@drawable/default_photo"
            app:civ_circle_background_color="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/settings_full_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_large_large_margin"
            tools:text="@string/settings_default_username"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/normal_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/settings_user_photo"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/settings_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="4dp"
            tools:text="@string/settings_default_status_user"
            android:textColor="@color/colorAccentDark"
            android:textSize="@dimen/small_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/settings_user_photo"
            app:layout_constraintTop_toBottomOf="@id/settings_full_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/settings_text_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/settings_header_block"
        android:text="@string/settings_account"
        android:textStyle="bold"
        android:textSize="@dimen/small_text"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_large_margin" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_number_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_text_account"
        style="@style/settings_buttons"
        android:focusable="true"
        android:clickable="true"
        android:background="@drawable/riple_effect">

        <TextView
            android:id="@+id/settings_phone_number"
            tools:text="@string/settings_default_number"
            app:layout_constraintTop_toTopOf="@id/settings_btn_change_number_phone"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/normal_text" />

        <TextView
            android:id="@+id/settings_label_change_phone_number"
            android:text="@string/settings_label_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_phone_number"
            style="@style/small_text" />

        <View
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_label_change_phone_number"
            style="@style/siporator" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_btn_change_number_phone"
        style="@style/settings_buttons"
        android:focusable="true"
        android:clickable="true"
        android:background="@drawable/riple_effect">

        <TextView
            android:id="@+id/settings_username"
            tools:text="@string/settings_default_login"
            app:layout_constraintTop_toTopOf="@id/settings_btn_change_username"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/normal_text" />

        <TextView
            android:id="@+id/settings_label_username"
            android:text="@string/settings_label_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_username"
            style="@style/small_text" />

        <View
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_label_username"
            style="@style/siporator" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_bio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_btn_change_username"
        style="@style/settings_buttons"
        android:focusable="true"
        android:clickable="true"
        android:background="@drawable/riple_effect">

        <TextView
            android:id="@+id/settings_bio"
            android:text="@string/settings_default_bio"
            app:layout_constraintTop_toTopOf="@id/settings_btn_change_bio"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/normal_text" />

        <TextView
            android:id="@+id/settings_label_change_bio"
            android:text="@string/settings_label_bio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_bio"
            style="@style/small_text" />

        <View
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_label_change_bio"
            style="@style/siporator" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_change_photo"
        android:layout_width="@dimen/settings_btn_change_photo_width_and_height"
        android:layout_height="@dimen/settings_btn_change_photo_width_and_height"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:src="@drawable/ic_camera"
        app:civ_border_color="@color/colorGray"
        app:civ_circle_background_color="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/settings_header_block"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_header_block" />

</androidx.constraintlayout.widget.ConstraintLayout>